# noahmp

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md
.github/workflows/: datm_noahmp.yaml
.github/workflows/data/: C96.initial.tile1.nc  C96.initial.tile2.nc  C96.initial.tile3.nc  C96.initial.tile4.nc  C96.initial.tile5.nc  C96.initial.tile6.nc  oro_data.tile1.nc  oro_data.tile2.nc  oro_data.tile3.nc  oro_data.tile4.nc  oro_data.tile5.nc  oro_data.tile6.nc
.github/workflows/scripts/: gen_config.py  get_input.py
.github/workflows/spack/: spack.yaml
.github/workflows/tests/: datm.yaml  lnd.yaml  test_datm_lnd.yaml
.github/workflows/tests/test_datm_lnd/: datm.yaml  lnd.yaml
.spack/: spack.yaml
HRLDAS/: user_build_options
HRLDAS/phys/: module_sf_noahmplsm.F
drivers/ccpp/: funcphys.f90  machine.F  noahmp_tables.f90  noahmpdrv.F90  physcons.F90  set_soilveg.f  sfc_diff.f  sfc_noahmp_drv.F90  update.sh
drivers/erf/: BiochemVarInTransferMod.F90  CMakeLists.txt  ConfigVarInTransferMod.F90  ForcingVarInTransferMod.F90  Makefile  NoahArray.H  NoahmpDriverMainMod.F90  NoahmpGroundwaterInitMod.F90  NoahmpIO.H  NoahmpIO.cpp  NoahmpIOVarInitMod.F90  NoahmpIOVarType.F90  NoahmpIO_fi.F90  NoahmpInitMainMod.F90  NoahmpReadLandMod.F90  NoahmpReadLandMod.F90.REF  NoahmpReadLandMod.F90.save  NoahmpReadNamelistMod.F90  NoahmpReadTableMod.F90  NoahmpTable.TBL  NoahmpWriteLandMod.F90
drivers/erf/prompts/: noahmpio_update.toml  noahmpwriteland_update.toml
drivers/hrldas/: BiochemVarInTransferMod.F90  BiochemVarOutTransferMod.F90  ConfigVarInTransferMod.F90  ConfigVarOutTransferMod.F90  EnergyVarInTransferMod.F90  EnergyVarOutTransferMod.F90  ForcingVarInTransferMod.F90  ForcingVarOutTransferMod.F90  Makefile  NoahmpDriverMainMod.F90  NoahmpGroundwaterInitMod.F90  NoahmpIO.H  NoahmpIO.cpp  NoahmpIOVarInitMod.F90  NoahmpIOVarType.F90  NoahmpIO_data.F90  NoahmpIO_fi.F90  NoahmpInitMainMod.F90  NoahmpMosaicSortTileCatMod.F90  NoahmpReadNamelistMod.F90  NoahmpReadTableMod.F90  NoahmpSnowInitMod.F90  PedoTransferSR2006Mod.F90  WaterVarInTransferMod.F90  WaterVarOutTransferMod.F90
drivers/lis/: .LisNoahmpParamType.F90.swp  BiochemVarInTransferMod.F90  ConfigVarInTransferMod.F90  EnergyVarInTransferMod.F90  EnergyVarOutTransferMod.F90  ForcingVarInTransferMod.F90  LisNoahmpParamType.F90  NoahmpDriverMainMod.F90  NoahmpGroundwaterInitMod.F90  NoahmpIOVarInitMod.F90  NoahmpIOVarType.F90  NoahmpInitMainMod.F90  NoahmpReadTableMod.F90  WaterVarInTransferMod.F90  WaterVarOutTransferMod.F90
drivers/nuopc/: lnd_comp_cplscalars.F90  lnd_comp_domain.F90  lnd_comp_driver.F90  lnd_comp_import_export.F90  lnd_comp_io.F90  lnd_comp_kind.F90  lnd_comp_nuopc.F90  lnd_comp_shr.F90  lnd_comp_types.F90
drivers/nuopc/docs/: README.md
drivers/nuopc/docs/source/: BuildingAndRunning.rst  ComponentTesting.rst  DriverAndCoupling.rst  conf.py  index.rst
drivers/wrf/: ForcingVarInTransferMod.F90  GroundWaterMmfMod.F90  NoahmpDriverMainMod.F90  NoahmpGroundwaterInitMod.F90  NoahmpIOVarInitMod.F90  NoahmpIOVarType.F90  NoahmpInitMainMod.F90  NoahmpSnowInitMod.F90  NoahmpUrbanDriverMainMod.F90  NoahmpWRFinitMod.F90  NoahmpWRFmainMod.F90  module_sf_noahmpdrv.F
drv_WRF/: module_sf_noahmpdrv.F
hrldas_utility_routines/: module_domain.F90  module_ra_gfdleta.F90
parameters/: MPTABLE.TBL  NoahmpTable.TBL  snicar_drdt_bst_fit_60_c070416.nc  snicar_optics_480bnd_c012422.nc  snicar_optics_5bnd_c013122.nc
src/: AtmosForcingMod.F90  BalanceErrorCheckGlacierMod.F90  BalanceErrorCheckMod.F90  CanopyHydrologyMod.F90  CanopyWaterInterceptMod.F90  ConfigVarInitMod.F90  ConfigVarType.F90  DynaRootGrowDieMod.F90  EnergyMainGlacierMod.F90  EnergyMainMod.F90  EnergyVarInitMod.F90  EnergyVarType.F90  ForcingVarInitMod.F90  ForcingVarType.F90  GlacierTemperatureMainMod.F90  GroundAlbedoMod.F90  GroundWaterMmfMod.F90  Makefile  ResistanceCanopyStomataBallBerryMod.F90  ResistanceCanopyStomataJarvisMod.F90  RunoffSurfaceWetlandMod.F90  SnowAerosolSnicarMod.F90  SnowAgeSnicarMod.F90  SnowAgingSnicarMod.F90  SnowAlbedoSnicarGlacierMod.F90  SnowAlbedoSnicarMod.F90  SnowCoverGroundAR25Mod.F90  SnowFreshRadiusMod.F90  SnowInputSnicarMod.F90  SnowLayerCombineMod.F90  SnowLayerDivideMod.F90  SnowRadiationSnicarMod.F90  SnowWaterMainGlacierMod.F90  SnowWaterMainMod.F90  SnowpackCompactionAR2023Mod.F90  SnowpackCompactionAR24Mod.F90  SnowpackCompactionARMod.F90  SnowpackHydrologyGlacierMod.F90  SnowpackHydrologyMod.F90  SoilMatricPotentialMod.F90  (+26 more)
tests/: datm.yaml  lnd.yaml  test_datm_lnd.yaml
tests/scripts/: gen_config.py  gen_runseq.py
utility/: Machine.F90  Makefile  PiecewiseLinearInterp1dMod.F90
